chore: fix descender clipping issue on combo-box dropdown

--- a/src/app/shared/components/template/components/combo-box/combo-box-dropdown/combo-box-dropdown.component.scss
+++ b/src/app/shared/components/template/components/combo-box/combo-box-dropdown/combo-box-dropdown.component.scss
@@ -16,6 +16,7 @@ $border-with-value: var(--combo-box-border-with-value, var(--ion-color-primary-3
   width: 100%;
   height: 58px;
   display: flex;
+  align-items: center;
   min-height: var(--combo-box-min-height, 58px);
   font-size: var(--combo-box-font-size-standard, 18px);
   border-radius: var(--ion-border-radius-standard, 8px);
@@ -55,16 +56,14 @@ $border-with-value: var(--combo-box-border-with-value, var(--ion-color-primary-3
     flex: 1;
     min-width: 0;
     text-align: start;
-    margin-top: auto;
-    margin-bottom: auto;
+    line-height: normal;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
   }
 
   ion-icon {
-    margin-top: auto;
-    margin-bottom: auto;
+    flex-shrink: 0;
     margin-left: auto;
     width: 0.8125rem;
   }
